<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tab_planning.dishcreation.DishCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dish_creation_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/dish_creation_menu"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/dish_creation_toolbar_title" />

        <TextView
            android:id="@+id/dish_creation_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dish_creation_name_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_toolbar" />

        <EditText
            android:id="@+id/dish_creation_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:maxLength="100"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dish_creation_name_title"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_toolbar" />

        <View
            android:id="@+id/dish_creation_name_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/planning_gradient_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_name_input" />

        <ImageView
            android:id="@+id/dish_creation_link_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_round_menu_book_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_name_separator"
            app:tint="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dish_creation_link_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/dish_creation_link_input_hint"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dish_creation_link_image"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_name_separator" />

        <View
            android:id="@+id/dish_creation_link_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/planning_gradient_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_link_input" />

        <TextView
            android:id="@+id/dish_creation_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aucun aliment pour le moment"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/dish_creation_food_list"
            app:layout_constraintEnd_toEndOf="@id/dish_creation_food_list"
            app:layout_constraintStart_toStartOf="@id/dish_creation_food_list"
            app:layout_constraintTop_toTopOf="@id/dish_creation_food_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dish_creation_food_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_creation_link_separator" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/dish_creation_add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dish_creation_fab_title"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange"
            app:icon="@drawable/ic_round_edit_24"
            app:iconTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>