<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jgarnier.menuapplication.ui.daily.DailyMenuViewModel" />

        <variable
            name="state"
            type="com.jgarnier.menuapplication.ui.daily.DailyMenuState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <CalendarView
            android:id="@+id/daily_menu_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/daily_menu_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_menu_calendar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/daily_menu_card_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:paddingStart="40dp"
                android:paddingTop="16dp"
                android:paddingEnd="40dp">

                <TextView
                    android:id="@+id/daily_menu_date_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{state.currentDate}"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Mardi 8 Février" />

                <View
                    android:id="@+id/daily_menu_date_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_date_title" />

                <TextView
                    android:id="@+id/daily_menu_lunch_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/daily_menu_lunch_title"
                    android:textColor="@color/primaryColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_date_divider" />

                <TextView
                    android:id="@+id/daily_menu_lunch_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{state.lunchDescription}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_lunch_title"
                    tools:text="Enchillas aux poulets" />

                <TextView
                    android:id="@+id/daily_menu_dinner_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/daily_menu_evening_title"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_lunch_data" />

                <TextView
                    android:id="@+id/daily_menu_dinner_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{state.dinnerDescription}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_dinner_title"
                    tools:text="Enchillas aux poulets" />

                <View
                    android:id="@+id/daily_menu_button_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_dinner_data" />

                <Button
                    android:id="@+id/daily_menu_edit"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_menu_edit_button_text"
                    android:textColor="@color/secondaryDarkColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_button_divider" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/daily_menu_data_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{state.dailyMenuDataVisibility}"
                    app:constraint_referenced_ids="daily_menu_button_divider,daily_menu_edit,daily_menu_date_title,daily_menu_dinner_title,daily_menu_lunch_title,daily_menu_lunch_data,daily_menu_dinner_data,daily_menu_date_divider" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{state.loaderVisibility}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- ERROR -->

                <TextView
                    android:id="@+id/daily_menu_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/daily_menu_error_description"
                    app:layout_constraintBottom_toTopOf="@id/daily_menu_error_retry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/daily_menu_error_retry"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/daily_menu_error_retry"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_menu_error_description"
                    app:layout_constraintVertical_chainStyle="packed" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/daily_menu_error_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{state.errorVisibility}"
                    app:constraint_referenced_ids="daily_menu_error_description,daily_menu_error_retry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
