<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tab_planning.dishcreation.DishCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dish_line_creation_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="Liste d'aliments" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dish_line_creation_dish_line_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/dish_line_creation_dish_line_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_line_creation_toolbar" />

        <View
            android:id="@+id/dish_line_creation_dish_line_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/planning_gradient_background"
            app:layout_constraintBottom_toTopOf="@id/dish_line_creation_dish_line_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dish_line_creation_dish_line_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/dish_creation_food_name_input_hint"
            app:layout_constraintBottom_toTopOf="@id/dish_line_creation_dish_line_add_button"
            app:layout_constraintEnd_toStartOf="@id/dish_line_creation_dish_line_quantity_layout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dish_line_creation_dish_line_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLength="30"
                android:nextFocusForward="@id/dish_line_creation_quantity_input"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dish_line_creation_dish_line_quantity_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint=" "
            app:boxCornerRadiusTopEnd="0dp"
            app:layout_constraintBottom_toTopOf="@id/dish_line_creation_dish_line_add_button"
            app:layout_constraintEnd_toStartOf="@id/dish_line_creation_amount_sort_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dish_line_creation_quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dish_creation_food_quantity_input_hint"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true"
                android:textAlignment="textEnd" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dish_line_creation_amount_sort_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxCornerRadiusTopStart="0dp"
            app:layout_constraintBottom_toTopOf="@id/dish_line_creation_dish_line_add_button"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/dish_line_creation_amount_sort_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dish_line_creation_dish_line_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dish_creation_add_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>